parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    REVALUAR

Grammar

Rule 0     S' -> start
Rule 1     start -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> printInst PTCOMA
Rule 5     instruccion -> asignacion PTCOMA
Rule 6     instruccion -> structs PTCOMA
Rule 7     instruccion -> ifInst PTCOMA
Rule 8     llamadaExp -> ID PARIZQ paramExp PARDER
Rule 9     llamadaExp -> ID PARIZQ PARDER
Rule 10    paramExp -> paramExp COMA expresion
Rule 11    paramExp -> expresion
Rule 12    printInst -> PRINT PARIZQ paramExp PARDER
Rule 13    printInst -> PRINTLN PARIZQ paramExp PARDER
Rule 14    asignacion -> ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
Rule 15    asignacion -> ID IGUAL expresion
Rule 16    asignacion -> ID PUNTO ID IGUAL expresion
Rule 17    tipo -> TINT64
Rule 18    tipo -> TFLOAT64
Rule 19    tipo -> TSTRING
Rule 20    tipo -> TBOOL
Rule 21    tipo -> TCHAR
Rule 22    tipo -> TNULO
Rule 23    structs -> MUTABLE STRUCT ID atributos END
Rule 24    structs -> STRUCT ID atributos END
Rule 25    atributos -> atributos atributo
Rule 26    atributos -> atributo
Rule 27    atributo -> ID DOSPUNTOS DOSPUNTOS tipo PTCOMA
Rule 28    atributo -> ID PTCOMA
Rule 29    arreglo -> CORIZQ paramExp CORDER
Rule 30    arreglo -> expresion listaIndices
Rule 31    listaIndices -> listaIndices indice
Rule 32    listaIndices -> indice
Rule 33    indice -> CORIZQ expresion CORDER
Rule 34    bloque -> instrucciones
Rule 35    ifInst -> IF expresion bloque END
Rule 36    ifInst -> IF expresion bloque ELSE bloque END
Rule 37    ifInst -> IF expresion bloque elseIfInst END
Rule 38    elseIfInst -> ELSEIF expresion bloque
Rule 39    elseIfInst -> ELSEIF expresion bloque ELSE bloque
Rule 40    elseIfInst -> ELSEIF expresion bloque elseIfInst
Rule 41    expresion -> expresion MAS expresion
Rule 42    expresion -> expresion MENOS expresion
Rule 43    expresion -> expresion POR expresion
Rule 44    expresion -> expresion DIVIDIDO expresion
Rule 45    expresion -> expresion POTENCIA expresion
Rule 46    expresion -> expresion MODULO expresion
Rule 47    expresion -> expresion MAYOR expresion
Rule 48    expresion -> expresion MENOR expresion
Rule 49    expresion -> expresion MAYIGUAL expresion
Rule 50    expresion -> expresion MENIGUAL expresion
Rule 51    expresion -> expresion IGUALDAD expresion
Rule 52    expresion -> expresion DISTINTO expresion
Rule 53    expresion -> expresion AND expresion
Rule 54    expresion -> expresion OR expresion
Rule 55    expresion -> MENOS expresion
Rule 56    expresion -> NOT expresion
Rule 57    expresion -> PARIZQ expresion PARDER
Rule 58    expresion -> ENTERO
Rule 59    expresion -> DECIMAL
Rule 60    expresion -> STRING
Rule 61    expresion -> CHAR
Rule 62    expresion -> TRUE
Rule 63    expresion -> FALSE
Rule 64    expresion -> NOTHING
Rule 65    expresion -> ID PUNTO ID
Rule 66    expresion -> ID
Rule 67    expresion -> llamadaExp
Rule 68    expresion -> arreglo

Terminals, with rules where they appear

AND                  : 53
CHAR                 : 61
COMA                 : 10
CORDER               : 29 33
CORIZQ               : 29 33
DECIMAL              : 59
DISTINTO             : 52
DIVIDIDO             : 44
DOSPUNTOS            : 14 14 27 27
ELSE                 : 36 39
ELSEIF               : 38 39 40
END                  : 23 24 35 36 37
ENTERO               : 58
FALSE                : 63
ID                   : 8 9 14 15 16 16 23 24 27 28 65 65 66
IF                   : 35 36 37
IGUAL                : 14 15 16
IGUALDAD             : 51
MAS                  : 41
MAYIGUAL             : 49
MAYOR                : 47
MENIGUAL             : 50
MENOR                : 48
MENOS                : 42 55
MODULO               : 46
MUTABLE              : 23
NOT                  : 56
NOTHING              : 64
OR                   : 54
PARDER               : 8 9 12 13 57
PARIZQ               : 8 9 12 13 57
POR                  : 43
POTENCIA             : 45
PRINT                : 12
PRINTLN              : 13
PTCOMA               : 4 5 6 7 27 28
PUNTO                : 16 65
REVALUAR             : 
STRING               : 60
STRUCT               : 23 24
TBOOL                : 20
TCHAR                : 21
TFLOAT64             : 18
TINT64               : 17
TNULO                : 22
TRUE                 : 62
TSTRING              : 19
error                : 

Nonterminals, with rules where they appear

arreglo              : 68
asignacion           : 5
atributo             : 25 26
atributos            : 23 24 25
bloque               : 35 36 36 37 38 39 39 40
elseIfInst           : 37 40
expresion            : 10 11 14 15 16 30 33 35 36 37 38 39 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 56 57
ifInst               : 7
indice               : 31 32
instruccion          : 2 3
instrucciones        : 1 2 34
listaIndices         : 30 31
llamadaExp           : 67
paramExp             : 8 10 12 13 29
printInst            : 4
start                : 0
structs              : 6
tipo                 : 14 27

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . printInst PTCOMA
    (5) instruccion -> . asignacion PTCOMA
    (6) instruccion -> . structs PTCOMA
    (7) instruccion -> . ifInst PTCOMA
    (12) printInst -> . PRINT PARIZQ paramExp PARDER
    (13) printInst -> . PRINTLN PARIZQ paramExp PARDER
    (14) asignacion -> . ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (15) asignacion -> . ID IGUAL expresion
    (16) asignacion -> . ID PUNTO ID IGUAL expresion
    (23) structs -> . MUTABLE STRUCT ID atributos END
    (24) structs -> . STRUCT ID atributos END
    (35) ifInst -> . IF expresion bloque END
    (36) ifInst -> . IF expresion bloque ELSE bloque END
    (37) ifInst -> . IF expresion bloque elseIfInst END

    PRINT           shift and go to state 8
    PRINTLN         shift and go to state 9
    ID              shift and go to state 10
    MUTABLE         shift and go to state 11
    STRUCT          shift and go to state 12
    IF              shift and go to state 13

    start                          shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    printInst                      shift and go to state 4
    asignacion                     shift and go to state 5
    structs                        shift and go to state 6
    ifInst                         shift and go to state 7

state 1

    (0) S' -> start .



state 2

    (1) start -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . printInst PTCOMA
    (5) instruccion -> . asignacion PTCOMA
    (6) instruccion -> . structs PTCOMA
    (7) instruccion -> . ifInst PTCOMA
    (12) printInst -> . PRINT PARIZQ paramExp PARDER
    (13) printInst -> . PRINTLN PARIZQ paramExp PARDER
    (14) asignacion -> . ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (15) asignacion -> . ID IGUAL expresion
    (16) asignacion -> . ID PUNTO ID IGUAL expresion
    (23) structs -> . MUTABLE STRUCT ID atributos END
    (24) structs -> . STRUCT ID atributos END
    (35) ifInst -> . IF expresion bloque END
    (36) ifInst -> . IF expresion bloque ELSE bloque END
    (37) ifInst -> . IF expresion bloque elseIfInst END

    $end            reduce using rule 1 (start -> instrucciones .)
    PRINT           shift and go to state 8
    PRINTLN         shift and go to state 9
    ID              shift and go to state 10
    MUTABLE         shift and go to state 11
    STRUCT          shift and go to state 12
    IF              shift and go to state 13

    instruccion                    shift and go to state 14
    printInst                      shift and go to state 4
    asignacion                     shift and go to state 5
    structs                        shift and go to state 6
    ifInst                         shift and go to state 7

state 3

    (3) instrucciones -> instruccion .

    PRINT           reduce using rule 3 (instrucciones -> instruccion .)
    PRINTLN         reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    MUTABLE         reduce using rule 3 (instrucciones -> instruccion .)
    STRUCT          reduce using rule 3 (instrucciones -> instruccion .)
    IF              reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    END             reduce using rule 3 (instrucciones -> instruccion .)
    ELSE            reduce using rule 3 (instrucciones -> instruccion .)
    ELSEIF          reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> printInst . PTCOMA

    PTCOMA          shift and go to state 15


state 5

    (5) instruccion -> asignacion . PTCOMA

    PTCOMA          shift and go to state 16


state 6

    (6) instruccion -> structs . PTCOMA

    PTCOMA          shift and go to state 17


state 7

    (7) instruccion -> ifInst . PTCOMA

    PTCOMA          shift and go to state 18


state 8

    (12) printInst -> PRINT . PARIZQ paramExp PARDER

    PARIZQ          shift and go to state 19


state 9

    (13) printInst -> PRINTLN . PARIZQ paramExp PARDER

    PARIZQ          shift and go to state 20


state 10

    (14) asignacion -> ID . IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (15) asignacion -> ID . IGUAL expresion
    (16) asignacion -> ID . PUNTO ID IGUAL expresion

    IGUAL           shift and go to state 21
    PUNTO           shift and go to state 22


state 11

    (23) structs -> MUTABLE . STRUCT ID atributos END

    STRUCT          shift and go to state 23


state 12

    (24) structs -> STRUCT . ID atributos END

    ID              shift and go to state 24


state 13

    (35) ifInst -> IF . expresion bloque END
    (36) ifInst -> IF . expresion bloque ELSE bloque END
    (37) ifInst -> IF . expresion bloque elseIfInst END
    (41) expresion -> . expresion MAS expresion
    (42) expresion -> . expresion MENOS expresion
    (43) expresion -> . expresion POR expresion
    (44) expresion -> . expresion DIVIDIDO expresion
    (45) expresion -> . expresion POTENCIA expresion
    (46) expresion -> . expresion MODULO expresion
    (47) expresion -> . expresion MAYOR expresion
    (48) expresion -> . expresion MENOR expresion
    (49) expresion -> . expresion MAYIGUAL expresion
    (50) expresion -> . expresion MENIGUAL expresion
    (51) expresion -> . expresion IGUALDAD expresion
    (52) expresion -> . expresion DISTINTO expresion
    (53) expresion -> . expresion AND expresion
    (54) expresion -> . expresion OR expresion
    (55) expresion -> . MENOS expresion
    (56) expresion -> . NOT expresion
    (57) expresion -> . PARIZQ expresion PARDER
    (58) expresion -> . ENTERO
    (59) expresion -> . DECIMAL
    (60) expresion -> . STRING
    (61) expresion -> . CHAR
    (62) expresion -> . TRUE
    (63) expresion -> . FALSE
    (64) expresion -> . NOTHING
    (65) expresion -> . ID PUNTO ID
    (66) expresion -> . ID
    (67) expresion -> . llamadaExp
    (68) expresion -> . arreglo
    (8) llamadaExp -> . ID PARIZQ paramExp PARDER
    (9) llamadaExp -> . ID PARIZQ PARDER
    (29) arreglo -> . CORIZQ paramExp CORDER
    (30) arreglo -> . expresion listaIndices

    MENOS           shift and go to state 26
    NOT             shift and go to state 27
    PARIZQ          shift and go to state 28
    ENTERO          shift and go to state 29
    DECIMAL         shift and go to state 30
    STRING          shift and go to state 31
    CHAR            shift and go to state 32
    TRUE            shift and go to state 33
    FALSE           shift and go to state 34
    NOTHING         shift and go to state 35
    ID              shift and go to state 36
    CORIZQ          shift and go to state 39

    expresion                      shift and go to state 25
    llamadaExp                     shift and go to state 37
    arreglo                        shift and go to state 38

state 14

    (2) instrucciones -> instrucciones instruccion .

    PRINT           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    PRINTLN         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    MUTABLE         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    STRUCT          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    IF              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    END             reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ELSE            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ELSEIF          reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 15

    (4) instruccion -> printInst PTCOMA .

    PRINT           reduce using rule 4 (instruccion -> printInst PTCOMA .)
    PRINTLN         reduce using rule 4 (instruccion -> printInst PTCOMA .)
    ID              reduce using rule 4 (instruccion -> printInst PTCOMA .)
    MUTABLE         reduce using rule 4 (instruccion -> printInst PTCOMA .)
    STRUCT          reduce using rule 4 (instruccion -> printInst PTCOMA .)
    IF              reduce using rule 4 (instruccion -> printInst PTCOMA .)
    $end            reduce using rule 4 (instruccion -> printInst PTCOMA .)
    END             reduce using rule 4 (instruccion -> printInst PTCOMA .)
    ELSE            reduce using rule 4 (instruccion -> printInst PTCOMA .)
    ELSEIF          reduce using rule 4 (instruccion -> printInst PTCOMA .)


state 16

    (5) instruccion -> asignacion PTCOMA .

    PRINT           reduce using rule 5 (instruccion -> asignacion PTCOMA .)
    PRINTLN         reduce using rule 5 (instruccion -> asignacion PTCOMA .)
    ID              reduce using rule 5 (instruccion -> asignacion PTCOMA .)
    MUTABLE         reduce using rule 5 (instruccion -> asignacion PTCOMA .)
    STRUCT          reduce using rule 5 (instruccion -> asignacion PTCOMA .)
    IF              reduce using rule 5 (instruccion -> asignacion PTCOMA .)
    $end            reduce using rule 5 (instruccion -> asignacion PTCOMA .)
    END             reduce using rule 5 (instruccion -> asignacion PTCOMA .)
    ELSE            reduce using rule 5 (instruccion -> asignacion PTCOMA .)
    ELSEIF          reduce using rule 5 (instruccion -> asignacion PTCOMA .)


state 17

    (6) instruccion -> structs PTCOMA .

    PRINT           reduce using rule 6 (instruccion -> structs PTCOMA .)
    PRINTLN         reduce using rule 6 (instruccion -> structs PTCOMA .)
    ID              reduce using rule 6 (instruccion -> structs PTCOMA .)
    MUTABLE         reduce using rule 6 (instruccion -> structs PTCOMA .)
    STRUCT          reduce using rule 6 (instruccion -> structs PTCOMA .)
    IF              reduce using rule 6 (instruccion -> structs PTCOMA .)
    $end            reduce using rule 6 (instruccion -> structs PTCOMA .)
    END             reduce using rule 6 (instruccion -> structs PTCOMA .)
    ELSE            reduce using rule 6 (instruccion -> structs PTCOMA .)
    ELSEIF          reduce using rule 6 (instruccion -> structs PTCOMA .)


state 18

    (7) instruccion -> ifInst PTCOMA .

    PRINT           reduce using rule 7 (instruccion -> ifInst PTCOMA .)
    PRINTLN         reduce using rule 7 (instruccion -> ifInst PTCOMA .)
    ID              reduce using rule 7 (instruccion -> ifInst PTCOMA .)
    MUTABLE         reduce using rule 7 (instruccion -> ifInst PTCOMA .)
    STRUCT          reduce using rule 7 (instruccion -> ifInst PTCOMA .)
    IF              reduce using rule 7 (instruccion -> ifInst PTCOMA .)
    $end            reduce using rule 7 (instruccion -> ifInst PTCOMA .)
    END             reduce using rule 7 (instruccion -> ifInst PTCOMA .)
    ELSE            reduce using rule 7 (instruccion -> ifInst PTCOMA .)
    ELSEIF          reduce using rule 7 (instruccion -> ifInst PTCOMA .)


state 19

    (12) printInst -> PRINT PARIZQ . paramExp PARDER
    (10) paramExp -> . paramExp COMA expresion
    (11) paramExp -> . expresion
    (41) expresion -> . expresion MAS expresion
    (42) expresion -> . expresion MENOS expresion
    (43) expresion -> . expresion POR expresion
    (44) expresion -> . expresion DIVIDIDO expresion
    (45) expresion -> . expresion POTENCIA expresion
    (46) expresion -> . expresion MODULO expresion
    (47) expresion -> . expresion MAYOR expresion
    (48) expresion -> . expresion MENOR expresion
    (49) expresion -> . expresion MAYIGUAL expresion
    (50) expresion -> . expresion MENIGUAL expresion
    (51) expresion -> . expresion IGUALDAD expresion
    (52) expresion -> . expresion DISTINTO expresion
    (53) expresion -> . expresion AND expresion
    (54) expresion -> . expresion OR expresion
    (55) expresion -> . MENOS expresion
    (56) expresion -> . NOT expresion
    (57) expresion -> . PARIZQ expresion PARDER
    (58) expresion -> . ENTERO
    (59) expresion -> . DECIMAL
    (60) expresion -> . STRING
    (61) expresion -> . CHAR
    (62) expresion -> . TRUE
    (63) expresion -> . FALSE
    (64) expresion -> . NOTHING
    (65) expresion -> . ID PUNTO ID
    (66) expresion -> . ID
    (67) expresion -> . llamadaExp
    (68) expresion -> . arreglo
    (8) llamadaExp -> . ID PARIZQ paramExp PARDER
    (9) llamadaExp -> . ID PARIZQ PARDER
    (29) arreglo -> . CORIZQ paramExp CORDER
    (30) arreglo -> . expresion listaIndices

    MENOS           shift and go to state 26
    NOT             shift and go to state 27
    PARIZQ          shift and go to state 28
    ENTERO          shift and go to state 29
    DECIMAL         shift and go to state 30
    STRING          shift and go to state 31
    CHAR            shift and go to state 32
    TRUE            shift and go to state 33
    FALSE           shift and go to state 34
    NOTHING         shift and go to state 35
    ID              shift and go to state 36
    CORIZQ          shift and go to state 39

    paramExp                       shift and go to state 40
    expresion                      shift and go to state 41
    llamadaExp                     shift and go to state 37
    arreglo                        shift and go to state 38

state 20

    (13) printInst -> PRINTLN PARIZQ . paramExp PARDER
    (10) paramExp -> . paramExp COMA expresion
    (11) paramExp -> . expresion
    (41) expresion -> . expresion MAS expresion
    (42) expresion -> . expresion MENOS expresion
    (43) expresion -> . expresion POR expresion
    (44) expresion -> . expresion DIVIDIDO expresion
    (45) expresion -> . expresion POTENCIA expresion
    (46) expresion -> . expresion MODULO expresion
    (47) expresion -> . expresion MAYOR expresion
    (48) expresion -> . expresion MENOR expresion
    (49) expresion -> . expresion MAYIGUAL expresion
    (50) expresion -> . expresion MENIGUAL expresion
    (51) expresion -> . expresion IGUALDAD expresion
    (52) expresion -> . expresion DISTINTO expresion
    (53) expresion -> . expresion AND expresion
    (54) expresion -> . expresion OR expresion
    (55) expresion -> . MENOS expresion
    (56) expresion -> . NOT expresion
    (57) expresion -> . PARIZQ expresion PARDER
    (58) expresion -> . ENTERO
    (59) expresion -> . DECIMAL
    (60) expresion -> . STRING
    (61) expresion -> . CHAR
    (62) expresion -> . TRUE
    (63) expresion -> . FALSE
    (64) expresion -> . NOTHING
    (65) expresion -> . ID PUNTO ID
    (66) expresion -> . ID
    (67) expresion -> . llamadaExp
    (68) expresion -> . arreglo
    (8) llamadaExp -> . ID PARIZQ paramExp PARDER
    (9) llamadaExp -> . ID PARIZQ PARDER
    (29) arreglo -> . CORIZQ paramExp CORDER
    (30) arreglo -> . expresion listaIndices

    MENOS           shift and go to state 26
    NOT             shift and go to state 27
    PARIZQ          shift and go to state 28
    ENTERO          shift and go to state 29
    DECIMAL         shift and go to state 30
    STRING          shift and go to state 31
    CHAR            shift and go to state 32
    TRUE            shift and go to state 33
    FALSE           shift and go to state 34
    NOTHING         shift and go to state 35
    ID              shift and go to state 36
    CORIZQ          shift and go to state 39

    paramExp                       shift and go to state 42
    expresion                      shift and go to state 41
    llamadaExp                     shift and go to state 37
    arreglo                        shift and go to state 38

state 21

    (14) asignacion -> ID IGUAL . expresion DOSPUNTOS DOSPUNTOS tipo
    (15) asignacion -> ID IGUAL . expresion
    (41) expresion -> . expresion MAS expresion
    (42) expresion -> . expresion MENOS expresion
    (43) expresion -> . expresion POR expresion
    (44) expresion -> . expresion DIVIDIDO expresion
    (45) expresion -> . expresion POTENCIA expresion
    (46) expresion -> . expresion MODULO expresion
    (47) expresion -> . expresion MAYOR expresion
    (48) expresion -> . expresion MENOR expresion
    (49) expresion -> . expresion MAYIGUAL expresion
    (50) expresion -> . expresion MENIGUAL expresion
    (51) expresion -> . expresion IGUALDAD expresion
    (52) expresion -> . expresion DISTINTO expresion
    (53) expresion -> . expresion AND expresion
    (54) expresion -> . expresion OR expresion
    (55) expresion -> . MENOS expresion
    (56) expresion -> . NOT expresion
    (57) expresion -> . PARIZQ expresion PARDER
    (58) expresion -> . ENTERO
    (59) expresion -> . DECIMAL
    (60) expresion -> . STRING
    (61) expresion -> . CHAR
    (62) expresion -> . TRUE
    (63) expresion -> . FALSE
    (64) expresion -> . NOTHING
    (65) expresion -> . ID PUNTO ID
    (66) expresion -> . ID
    (67) expresion -> . llamadaExp
    (68) expresion -> . arreglo
    (8) llamadaExp -> . ID PARIZQ paramExp PARDER
    (9) llamadaExp -> . ID PARIZQ PARDER
    (29) arreglo -> . CORIZQ paramExp CORDER
    (30) arreglo -> . expresion listaIndices

    MENOS           shift and go to state 26
    NOT             shift and go to state 27
    PARIZQ          shift and go to state 28
    ENTERO          shift and go to state 29
    DECIMAL         shift and go to state 30
    STRING          shift and go to state 31
    CHAR            shift and go to state 32
    TRUE            shift and go to state 33
    FALSE           shift and go to state 34
    NOTHING         shift and go to state 35
    ID              shift and go to state 36
    CORIZQ          shift and go to state 39

    expresion                      shift and go to state 43
    llamadaExp                     shift and go to state 37
    arreglo                        shift and go to state 38

state 22

    (16) asignacion -> ID PUNTO . ID IGUAL expresion

    ID              shift and go to state 44


state 23

    (23) structs -> MUTABLE STRUCT . ID atributos END

    ID              shift and go to state 45


state 24

    (24) structs -> STRUCT ID . atributos END
    (25) atributos -> . atributos atributo
    (26) atributos -> . atributo
    (27) atributo -> . ID DOSPUNTOS DOSPUNTOS tipo PTCOMA
    (28) atributo -> . ID PTCOMA

    ID              shift and go to state 46

    atributos                      shift and go to state 47
    atributo                       shift and go to state 48

state 25

    (35) ifInst -> IF expresion . bloque END
    (36) ifInst -> IF expresion . bloque ELSE bloque END
    (37) ifInst -> IF expresion . bloque elseIfInst END
    (41) expresion -> expresion . MAS expresion
    (42) expresion -> expresion . MENOS expresion
    (43) expresion -> expresion . POR expresion
    (44) expresion -> expresion . DIVIDIDO expresion
    (45) expresion -> expresion . POTENCIA expresion
    (46) expresion -> expresion . MODULO expresion
    (47) expresion -> expresion . MAYOR expresion
    (48) expresion -> expresion . MENOR expresion
    (49) expresion -> expresion . MAYIGUAL expresion
    (50) expresion -> expresion . MENIGUAL expresion
    (51) expresion -> expresion . IGUALDAD expresion
    (52) expresion -> expresion . DISTINTO expresion
    (53) expresion -> expresion . AND expresion
    (54) expresion -> expresion . OR expresion
    (30) arreglo -> expresion . listaIndices
    (34) bloque -> . instrucciones
    (31) listaIndices -> . listaIndices indice
    (32) listaIndices -> . indice
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (33) indice -> . CORIZQ expresion CORDER
    (4) instruccion -> . printInst PTCOMA
    (5) instruccion -> . asignacion PTCOMA
    (6) instruccion -> . structs PTCOMA
    (7) instruccion -> . ifInst PTCOMA
    (12) printInst -> . PRINT PARIZQ paramExp PARDER
    (13) printInst -> . PRINTLN PARIZQ paramExp PARDER
    (14) asignacion -> . ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (15) asignacion -> . ID IGUAL expresion
    (16) asignacion -> . ID PUNTO ID IGUAL expresion
    (23) structs -> . MUTABLE STRUCT ID atributos END
    (24) structs -> . STRUCT ID atributos END
    (35) ifInst -> . IF expresion bloque END
    (36) ifInst -> . IF expresion bloque ELSE bloque END
    (37) ifInst -> . IF expresion bloque elseIfInst END

    MAS             shift and go to state 50
    MENOS           shift and go to state 51
    POR             shift and go to state 52
    DIVIDIDO        shift and go to state 53
    POTENCIA        shift and go to state 54
    MODULO          shift and go to state 55
    MAYOR           shift and go to state 56
    MENOR           shift and go to state 57
    MAYIGUAL        shift and go to state 58
    MENIGUAL        shift and go to state 59
    IGUALDAD        shift and go to state 60
    DISTINTO        shift and go to state 61
    AND             shift and go to state 62
    OR              shift and go to state 63
    CORIZQ          shift and go to state 67
    PRINT           shift and go to state 8
    PRINTLN         shift and go to state 9
    ID              shift and go to state 10
    MUTABLE         shift and go to state 11
    STRUCT          shift and go to state 12
    IF              shift and go to state 13

    bloque                         shift and go to state 49
    listaIndices                   shift and go to state 64
    instrucciones                  shift and go to state 65
    indice                         shift and go to state 66
    instruccion                    shift and go to state 3
    printInst                      shift and go to state 4
    asignacion                     shift and go to state 5
    structs                        shift and go to state 6
    ifInst                         shift and go to state 7

state 26

    (55) expresion -> MENOS . expresion
    (41) expresion -> . expresion MAS expresion
    (42) expresion -> . expresion MENOS expresion
    (43) expresion -> . expresion POR expresion
    (44) expresion -> . expresion DIVIDIDO expresion
    (45) expresion -> . expresion POTENCIA expresion
    (46) expresion -> . expresion MODULO expresion
    (47) expresion -> . expresion MAYOR expresion
    (48) expresion -> . expresion MENOR expresion
    (49) expresion -> . expresion MAYIGUAL expresion
    (50) expresion -> . expresion MENIGUAL expresion
    (51) expresion -> . expresion IGUALDAD expresion
    (52) expresion -> . expresion DISTINTO expresion
    (53) expresion -> . expresion AND expresion
    (54) expresion -> . expresion OR expresion
    (55) expresion -> . MENOS expresion
    (56) expresion -> . NOT expresion
    (57) expresion -> . PARIZQ expresion PARDER
    (58) expresion -> . ENTERO
    (59) expresion -> . DECIMAL
    (60) expresion -> . STRING
    (61) expresion -> . CHAR
    (62) expresion -> . TRUE
    (63) expresion -> . FALSE
    (64) expresion -> . NOTHING
    (65) expresion -> . ID PUNTO ID
    (66) expresion -> . ID
    (67) expresion -> . llamadaExp
    (68) expresion -> . arreglo
    (8) llamadaExp -> . ID PARIZQ paramExp PARDER
    (9) llamadaExp -> . ID PARIZQ PARDER
    (29) arreglo -> . CORIZQ paramExp CORDER
    (30) arreglo -> . expresion listaIndices

    MENOS           shift and go to state 26
    NOT             shift and go to state 27
    PARIZQ          shift and go to state 28
    ENTERO          shift and go to state 29
    DECIMAL         shift and go to state 30
    STRING          shift and go to state 31
    CHAR            shift and go to state 32
    TRUE            shift and go to state 33
    FALSE           shift and go to state 34
    NOTHING         shift and go to state 35
    ID              shift and go to state 36
    CORIZQ          shift and go to state 39

    expresion                      shift and go to state 68
    llamadaExp                     shift and go to state 37
    arreglo                        shift and go to state 38

state 27

    (56) expresion -> NOT . expresion
    (41) expresion -> . expresion MAS expresion
    (42) expresion -> . expresion MENOS expresion
    (43) expresion -> . expresion POR expresion
    (44) expresion -> . expresion DIVIDIDO expresion
    (45) expresion -> . expresion POTENCIA expresion
    (46) expresion -> . expresion MODULO expresion
    (47) expresion -> . expresion MAYOR expresion
    (48) expresion -> . expresion MENOR expresion
    (49) expresion -> . expresion MAYIGUAL expresion
    (50) expresion -> . expresion MENIGUAL expresion
    (51) expresion -> . expresion IGUALDAD expresion
    (52) expresion -> . expresion DISTINTO expresion
    (53) expresion -> . expresion AND expresion
    (54) expresion -> . expresion OR expresion
    (55) expresion -> . MENOS expresion
    (56) expresion -> . NOT expresion
    (57) expresion -> . PARIZQ expresion PARDER
    (58) expresion -> . ENTERO
    (59) expresion -> . DECIMAL
    (60) expresion -> . STRING
    (61) expresion -> . CHAR
    (62) expresion -> . TRUE
    (63) expresion -> . FALSE
    (64) expresion -> . NOTHING
    (65) expresion -> . ID PUNTO ID
    (66) expresion -> . ID
    (67) expresion -> . llamadaExp
    (68) expresion -> . arreglo
    (8) llamadaExp -> . ID PARIZQ paramExp PARDER
    (9) llamadaExp -> . ID PARIZQ PARDER
    (29) arreglo -> . CORIZQ paramExp CORDER
    (30) arreglo -> . expresion listaIndices

    MENOS           shift and go to state 26
    NOT             shift and go to state 27
    PARIZQ          shift and go to state 28
    ENTERO          shift and go to state 29
    DECIMAL         shift and go to state 30
    STRING          shift and go to state 31
    CHAR            shift and go to state 32
    TRUE            shift and go to state 33
    FALSE           shift and go to state 34
    NOTHING         shift and go to state 35
    ID              shift and go to state 36
    CORIZQ          shift and go to state 39

    expresion                      shift and go to state 69
    llamadaExp                     shift and go to state 37
    arreglo                        shift and go to state 38

state 28

    (57) expresion -> PARIZQ . expresion PARDER
    (41) expresion -> . expresion MAS expresion
    (42) expresion -> . expresion MENOS expresion
    (43) expresion -> . expresion POR expresion
    (44) expresion -> . expresion DIVIDIDO expresion
    (45) expresion -> . expresion POTENCIA expresion
    (46) expresion -> . expresion MODULO expresion
    (47) expresion -> . expresion MAYOR expresion
    (48) expresion -> . expresion MENOR expresion
    (49) expresion -> . expresion MAYIGUAL expresion
    (50) expresion -> . expresion MENIGUAL expresion
    (51) expresion -> . expresion IGUALDAD expresion
    (52) expresion -> . expresion DISTINTO expresion
    (53) expresion -> . expresion AND expresion
    (54) expresion -> . expresion OR expresion
    (55) expresion -> . MENOS expresion
    (56) expresion -> . NOT expresion
    (57) expresion -> . PARIZQ expresion PARDER
    (58) expresion -> . ENTERO
    (59) expresion -> . DECIMAL
    (60) expresion -> . STRING
    (61) expresion -> . CHAR
    (62) expresion -> . TRUE
    (63) expresion -> . FALSE
    (64) expresion -> . NOTHING
    (65) expresion -> . ID PUNTO ID
    (66) expresion -> . ID
    (67) expresion -> . llamadaExp
    (68) expresion -> . arreglo
    (8) llamadaExp -> . ID PARIZQ paramExp PARDER
    (9) llamadaExp -> . ID PARIZQ PARDER
    (29) arreglo -> . CORIZQ paramExp CORDER
    (30) arreglo -> . expresion listaIndices

    MENOS           shift and go to state 26
    NOT             shift and go to state 27
    PARIZQ          shift and go to state 28
    ENTERO          shift and go to state 29
    DECIMAL         shift and go to state 30
    STRING          shift and go to state 31
    CHAR            shift and go to state 32
    TRUE            shift and go to state 33
    FALSE           shift and go to state 34
    NOTHING         shift and go to state 35
    ID              shift and go to state 36
    CORIZQ          shift and go to state 39

    expresion                      shift and go to state 70
    llamadaExp                     shift and go to state 37
    arreglo                        shift and go to state 38

state 29

    (58) expresion -> ENTERO .
